# hermes-webui-desktop-companion

./: .env.example  .gitignore  README.md  package-lock.json  package.json
desktop-pet/: README.md  package-lock.json  package.json
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/src/: main.rs
desktop-pet/web/: bubbles.html  bubbles.js  pet.css  pet.html  pet.js
docs/: architecture.md  compatibility.md  extension-library-submission.md  protocol.md  webui-extension-setup.md
extension/: companion-adapter.css  companion-adapter.js  extension.json  manifest.json
extension/pets/courier/: pet.json
extension/pets/keeper/: pet.json
extension/pets/shiba/: pet.json
scripts/: print-webui-env.sh  run-dev.sh  start-pet.mjs  start-webui-plugin-mode.sh
src/: loopback-server.mjs
test/: extension-assets.test.mjs  loopback-server.test.mjs  start-pet-script.test.mjs
winui/: README.md
