[package]
name = "hermes-webui-desktop-companion-pet"
version = "0.1.0"
description = "Thin desktop shell for Hermes WebUI Desktop Companion"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow", "NSGraphics"] }
